--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,8 +1,9 @@
 <nav class="navbar " style="background-color: #90f85f">
    
-    <div class="container-fluid">
+    <div class="container-fluid" >
        
-      <a class="navbar-brand" href="/" style="font-weight:bolder"></i>Issue Tarcker</a>
+      <a class="navbar-brand" href="/" style="font-weight:bolder">Issue Tarcker</a>
+      <a class="navbar-brand" href="/" style="font-weight:bolder">Home</a>
     </div>
   </nav>
  
