--- a/views/project_form.ejs
+++ b/views/project_form.ejs
@@ -4,15 +4,15 @@
         <h4 style="color: rgb(97, 202, 244);">Create New Project</h4>
         <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Name</label>
-            <input type="text" class="form-control" name="name" id="exampleFormControlInput1" placeholder="enter your project name">
+            <input type="text" class="form-control" name="name" id="exampleFormControlInput1" placeholder="enter your project name" required>
           </div>
           <div class="mb-3">
             <label for="exampleFormControlTextarea1" class="form-label">Description</label>
-            <textarea class="form-control" name="Description" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <textarea class="form-control" name="Description" id="exampleFormControlTextarea1" rows="3" placeholder="write something about your project" required></textarea>
           </div>
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Author</label>
-            <input type="text" class="form-control" name="Author" id="exampleFormControlInput1" placeholder="Author name..">
+            <input type="text" class="form-control" name="Author" id="exampleFormControlInput1" placeholder="Author name.." required>
           </div>
           <div class="mb-1">
             
