--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,11 +9,11 @@
 
 
 <div id="project-container">
-    <ul id="project_list">
+    <ul id="project_list" style="padding: 0;">
         <% for(project of projects){ %>
             <li style="list-style-type: none;">
                 <!-- <div class="project"> -->
-                    <div class="container-sm text-center" style="border: 1px solid goldenrod; margin: 20px; background-color: rgb(244, 178, 116);">   
+                    <div class="container-sm text-center" style="border: 1px solid goldenrod; margin: 20px; background-color: rgb(244, 178, 116); margin: auto;">   
                   <p> Project Name - <%= project.name %></p>
                   <p > Description - <%= project.Description %></p>
                   <p>Author - <%= project.Author %></p>
